# modelica-rust-modbus-server

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  README.md  SETUP.md  docker-compose.yml  modbus_config.toml  project_structure.md
.cargo/: config.toml
docs/: register_mapping.md
examples/: nodejs_client.js  python_client.py  simple_client.rs
scripts/: diagnose.sh  monitor.sh  start_server.sh  test.sh  test_docker.sh  test_modbus.sh
src/: main.rs
tests/: modbus_client_test.rs
