[package]
name = "modelica-rust-modbus-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "modbus-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Modbus TCP server
tokio-modbus = { version = "0.14", features = ["server", "tcp-server"] }

# Modelica FFI wrapper (local path, will be submodule)
modelica-rust-ffi = { path = "./modelica-rust-ffi" }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
async-trait = "0.1"